--- a/views/index.html
+++ b/views/index.html
@@ -8,15 +8,22 @@
     <title>Document</title>
 </head>
 
-<body class="p-4">
-    <div id="app">
-        <h1 class="text-3xl font-bold underline">
-            Hello world!
+<body class="p-4 flex justify-center">
+    <div id="app" class="w-full xl:w-1/3">
+        <h1 class="ml-16 text-4xl font-bold underline text-green-700">
+            Wolapp
         </h1>
 
         <div class="mt-16 p-2">
-            <li>
-                <button @click="sendMagicPacket('00:11:32:49:C2:FB')">00:11:32:49:C2:FB</button>
+            <h2 class="text-2xl mb-16 italic underline">My devices</h2>
+            <li class="flex items-center">
+                <div class="mx-8 text-2xl">NAS</div>
+                <button
+                    class="bg-green-300 rounded border-black p-1 px-2 border-2 hover:bg-yellow-500 focus:bg-red-300"
+                    @click="sendMagicPacket('00:11:32:49:C2:FB')"
+                >
+                    Wake up
+                </button>
             </li>
         </div>
     </div>
@@ -39,6 +46,7 @@
                     address
                 })
             })
+            window.alert('Message sent');
         }
       }
     }).mount('#app')
