--- a/views/index.html
+++ b/views/index.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Document</title>
 </head>
 
 <body class="p-4 flex justify-center">
-    <div id="app" class="w-full xl:w-1/3">
-        <h1 class="ml-16 text-4xl font-bold underline text-green-700">
-            Wolapp
-        </h1>
+  <div id="app" class="w-full h-full mt-16 w-1/2 md:w-1/3 justify-center bg-red-800">
+    <h1 class="ml-16 text-8xl font-bold text-center text-purple-600">
+      Wolapp
+    </h1>
 
-        <div class="mt-16 p-2">
-            <h2 class="text-2xl mb-16 italic underline">My devices</h2>
-            <li class="flex items-center">
-                <div class="mx-8 text-2xl">NAS</div>
-                <button
-                    class="bg-green-300 rounded border-black p-1 px-2 border-2 hover:bg-yellow-500 focus:bg-red-300"
-                    @click="sendMagicPacket('00:11:32:49:C2:FB')"
-                >
-                    Wake up
-                </button>
-            </li>
-        </div>
+    <div class="mt-16 p-2 bg-red-200">
+      <h2 class="text-2xl mb-16 italic underline">My devices</h2>
+      <li class="flex items-center">
+        <div class="mx-8 text-2xl">NAS</div>
+
+        <button
+          class="bg-green-300 rounded border-black p-1 px-2 border-2 hover:bg-yellow-500 focus:bg-red-300"
+          @click="sendMagicPacket('00:11:32:49:C2:FB')">
+          Wake up
+        </button>
+      </li>
     </div>
+  </div>
 </body>
 
 <script type="module">
-    import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+  import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
 
-    createApp({
-      data() {
-        return {
-          message: 'Hello Vue!'
-        }
-      },
-      methods: {
-        sendMagicPacket(address) {
-            fetch('/api/send-magic-packet', {
-                method: "POST",
-                body: JSON.stringify({
-                    address
-                })
-            })
-            window.alert('Message sent');
-        }
+  createApp({
+    data() {
+      return {
+        message: 'Hello Vue!'
       }
-    }).mount('#app')
-  </script>
-
+    },
+    methods: {
+      sendMagicPacket(address) {
+        fetch('/api/send-magic-packet', {
+          method: "POST",
+          body: JSON.stringify({
+            address
+          })
+        })
+        window.alert('Message sent');
+      }
+    }
+  }).mount('#app')
+</script>
 </html>
